--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+    "dev": "webpack-dev-server",
+    "prod": "webpack --config webpack.config.prod.js"
   },
   "keywords": [
     "typescript",
     "course"
   ],
-  "author": "Maximilian Schwarzmüller",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.5.4"
+    "clean-webpack-plugin": "^3.0.0",
+    "lite-server": "^2.5.4",
+    "ts-loader": "^8.0.12",
+    "typescript": "^4.1.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
